# audio-cd-ripper

./: Cargo.toml  README.md
.github/workflows/: pull-request-workflow.yaml
src/: album_writer.rs  get_drive_letter.rs  main.rs  music_brainz.rs  read_drive.rs
src/music_brainz/: calculate_id.rs  fetch_metadata.rs
